Extract the staged-run pipeline shared by heap-dump init and the Advisor
The Advisor's run machinery was modelled on HeapDumpInitService but written as
a parallel implementation: a different stage model (an enum with a single
current status, so no per-stage history), its own registry, and its own result
store. The heap dump kept per-stage timings in a JSON sidecar; the Advisor kept
nothing. A user watching a five-minute AI run saw one dot move.

There is now one implementation in common-profile, configured twice. A pipeline
supplies its stage ids and two policy choices: whether runs are capped by a
concurrency ceiling, and whether a finished run is evicted after a while. Heap
dump init is uncapped and keeps its last run, because the work is local CPU and
IO and the settings page displays that run; an Advisor run holds a model call
open for minutes, so it is capped and expires once its findings are stored.

PipelineRun is the heap dump's RunState lifted whole, keeping beginStage and
completeStage public alongside runStage so IndexGroupProgress can still advance
load - parse - index on sub-phase start rather than a phase behind.

Terminal runs are stored in a new pipeline_runs table in the profile database,
keyed by pipeline and by what the run targeted, replacing the sidecar file.
Progress of a run in flight stays in memory: a run interrupted by a restart is
gone, which is truthful, because the work died with the process.

The Advisor gains per-stage timings, a visible store stage, and the heap dump's
timeline UI - HeapDumpInitTimeline becomes the shared StageTimeline, with the
phase definitions moved out to each feature. Clearing the heap-dump cache or
deleting the dump now also drops the stored init run, which previously would
have described an index that no longer existed.